# HAMLET

./: .gitignore  LICENSE  README.md  agents.py  bargaining_exp.bat  custom_gradio_ui.py  pyproject.toml  requirements.txt  run_agent_config_ui.py  run_bargaining_sim.sh  run_ui.py  start_vllm_server.sh  test.py  test_bargain.py  test_custom_gradui.py  test_gradioui.py  test_multi_agent.py  test_rubric_output_schema.py  test_sanity_checks.py
agent_configs/: agent_configs.json  tool_configs.json
apps/: README.md
apps/bargaining/: calculate_metrics_from_results.py  calculate_metrics_from_results_split_by_seller_cost.py  finetune.py  generate_metric_table.py  prepare_agent_dataset.py  run.py  run_simulation.py  simulate.py
apps/bargaining/bash/: simulate.bat
apps/bargaining/prompts/: bargaining_agent.yaml
apps/bargaining/results/: 20250606_094733_gpt-4.1_gpt-4.1_validation_results.json
apps/gaia_benchmark/: run_gaia.py
apps/literature_survey/: README.md  run.py
apps/operations_research/: README.md  run.py
bash/: bargaining_exp.sh  run_bargaining_sim.sh  simulate.sh
default_tools/: README.md
default_tools/file_editing/: file_editing_tools.py
default_tools/get_paper_from_url/: get_paper_from_url_tool.py
default_tools/kb_repo_management/: kb_repo_addition_tools.py  kb_repo_retrieval_tools.py  repo_indexer.py
default_tools/md2pdf/: md2pdf_tool.py
default_tools/open_deep_search/: ods_agent.py  ods_tool.py
default_tools/visual_qa/: visual_qa.py
default_tools_tests/: run_tests.py
default_tools_tests/kb_repo_management/: test_kb_repo_addition_tools.py  test_kb_repo_maintenance_tools.py  test_kb_repo_retrieval_tools.py
example_app/: run.py
example_app/index_dir/: faiss.index  metadata.json
example_app/persistent_storage/: agent_log_20250807_064914.txt  agent_log_20250807_082120.txt  manager_agent_log_20250807_083847.txt  manager_agent_log_20250807_084133.txt  manager_agent_log_20250807_084417.txt  manager_agent_log_20250807_085500.txt  manager_agent_log_20250807_090508.txt
example_apps/literature_survey/: run.py
examples/: gradio_gui_example.py  grpo_training_example.py  inspect_multiagent_run.py  parallel_code_blocks_example.py  rlvr_training_example.py  simple_agent.py  simple_agent_result.json  structured_schema_example.py  test_codeagent_rollout.py  test_parallel.json  train.py
examples/bargaining/: run_simulation.py  utils.py
examples/open_deep_research/: app.py  run.py  run_gaia.py  visual_vs_text_browser.ipynb
examples/simple_agent_workspace/: capital.txt
general_tools/: README.md
general_tools/fetch_arxiv_papers/: fetch_arxiv_papers_tools.py
general_tools/file_editing/: file_editing_tools.py
general_tools/kb_repo_management/: README.md  kb_repo_addition_tools.py  kb_repo_maintanence_tools.py  kb_repo_retrieval_tools.py  repo_indexer.py
general_tools/text_inspector/: text_inspector_tool.py
general_tools_tests/: run_tests.py
general_tools_tests/kb_repo_management/: test_kb_repo_addition_tools.py  test_kb_repo_maintenance_tools.py  test_kb_repo_retrieval_tools.py
helper_funcs/: fetch_data_from_langfuse.py
helper_scripts/: finetune.py
literature_survey_app/: combine_md_to_html.py  paper_search_agent.py  run.py  test.py  web_browsing_agent.py
literature_survey_app/prompts/: paper_search_agent.yaml  survey_writing_agent_prompts.py
literature_survey_app/utils/: html_enhancer.py
src/: agent_config_ui.py  agent_conversation_ui.py  agent_types.py  agents.py  base_agent.py  cli.py  custom_gradio_ui.py  custom_smolagents_instrumentor.py  customized_agents.py  default_tools.py  gradio_ui.py  local_python_executor.py  memory.py  monitoring.py  test_base_agent.py  tools.py
src/hamlet/: __init__.py
src/hamlet/core/: __init__.py  (+8 more)
src/minds_hamlet/: __init__.py
src/prompts/: bargaining_agent.yaml  bargaining_agent_v1.yaml  bargaining_agent_v2.yaml  bargaining_agent_v2_no_listing.yaml  customized_agent.yaml
tests/: conftest.py
tests/tools/: test_file_editing_tools.py  test_kb_addition_tools.py  test_kb_maintenance_tools.py  test_kb_retrieval_tools.py  test_visualizer_tool.py
train_agent/: fetch_data_from_langfuse.py
(+531 files in other folders)
