[project]
name = "minds-hamlet"
version = "0.1.3"
description = "Lightweight all-in-one framework for building, instrumenting, and fine-tuning LLM code agents."
readme = "README.md"
authors = [
    { name = "cyrilli", email = "948875507@qq.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["llm", "agents", "automation", "gradio", "langfuse", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface-hub>=0.31.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "jinja2>=3.1.4",
    "pillow>=10.0.1", # Security fix for CVE-2023-4863: https://pillow.readthedocs.io/en/stable/releasenotes/10.0.1.html
    "python-dotenv",
    "litellm>=1.60.2",
    "openai>=1.58.1",
    "datasets==4.1.1",
    "numpy",
    "pandas",
    "pydantic",
    "pyyaml",
    "soundfile",
    "gradio",
    "gradio_pdf>=0.0.22",
    "watchdog>=6.0.0",
    "opentelemetry-sdk>=1.33.1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "openinference-instrumentation-smolagents>=0.1.11",
]

[project.scripts]
hamlet = "hamlet:main"

[project.urls]
Homepage = "https://github.com/MINDS-THU/HAMLET"
Repository = "https://github.com/MINDS-THU/HAMLET"
Issues = "https://github.com/MINDS-THU/HAMLET/issues"
Documentation = "https://github.com/MINDS-THU/HAMLET#readme"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"hamlet.core.prompts" = ["*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hamlet", "hamlet.*", "minds_hamlet"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
tools = [
    "faiss-cpu",
    "langchain>=0.3.25",
    "markitdown[all]>=0.1.2",
]
train = [
    "torch>=2.7.0",
    "transformers",
    "accelerate>=1.4.0",
    "peft",
    "wandb",
    "trl>=0.17.0",
    "vllm>=0.9.2",
    "liger-kernel>=0.5.10",
    "deepspeed",
    "fastapi",
    "httpx",
    "nest_asyncio",
    "uvloop",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]
